--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This is just not right. You should resign for your behavior. That's the gutless leadership. 
-
-
+This is just not right. 
+ADDITION #1
+You should resign for your behavior. 
+That's the gutless leadership. 
