Changed the README file

--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-This is just not right. You should resign for your behavior. That's the gutless leadership. Period.
-Chris IS THE BEST!
+This is my next cool project. Testing for GitHub. Period.
